# Practica_Modelos_Clasificacion

./: LICENSE  README.md  boosting_práctica.ipynb  boosting_teoria.ipynb  pyproject.toml
Cuadernos/: Ejercicio_Practica_Tunning_Parametros.ipynb  Ejercicio_practica_Clase2.ipynb  boosting_práctica.ipynb
Datos/: Ejercicio_practica_Clase2.ipynb
